# simple-fastapi-app

./: .pre-commit-config.yaml  Dockerfile  Dockerfile-worker  README.md  pyproject.toml
app/: main.py
app/api/v1/dependancies/: __init__.py  query_dep.py  validate_authorization.py
app/api/v1/repositories/: authorization.py  candidates.py  users.py
app/api/v1/serializers/: authorization.py  candidates.py  users.py
app/api/v1/views/: authorization.py  candidates.py  health_check.py  users.py
app/celery/: app.py  config.py  tasks.py
app/models/: candidate.py  users.py
core/: settings.py
core/constants/: __init__.py  search.py
core/database/: base.py
core/enums/: __init__.py
core/helpers/: jwt.py
core/utils/: __init__.py  generate_csv.py
middleware/: __init__.py  exception_handler.py  logging_handler.py
tests/: conftest.py
tests/v1/: test_candidates.py  test_users.py
