[tool.poetry]
name = "signit-task"
version = "0.1.0"
description = "Technical Assignment For Signit"
authors = ["Abdalkreem Orabi <abdalkreemorabi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
odmantic = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
uvicorn = "^0.25.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
beanie = "^1.24.0"
bcrypt = "4.0.1"
isort = "^5.13.2"
asgi-correlation-id = "^4.3.0"
ddtrace = "^2.4.0"
structlog = "^23.3.0"
pandas = "^2.1.4"
pydantic-settings = "^2.1.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.26.0"
pytest = "^7.4.4"
anyio = "^4.2.0"
pytest-asyncio = "^0.23.3"
celery = "^5.3.4"
redis = "^5.0.7"
sentry-sdk = "^2.7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pytest-ordering = "^0.6"
pre-commit = "^3.7.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
